# Jarnac

./: CMakeLists.txt  LICENSE  README.md  Test  build.sh  jupytext.toml
docs/: tutoriel.txt
include/: IA.hpp  controleurModeTexte.hpp  gestionDict.hpp  moteur.hpp  vueEnModeTexte.hpp
src/: IA.cpp  controleurModeTexte.cpp  gestionDict.cpp  main.cpp  moteur.cpp  vueEnModeTexte.cpp
tests/: moteur-test.cpp
